--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,11 +38,12 @@ paste = "1.0.11"
 serde = { version = "1.0", default-features = false, optional = true }
 
 [features]
-default = [ "reexport" ]
+default = [ "reexport", "bn256-table" ]
 asm = []
+bn256-table = []
+derive_serde = [ "serde/derive" ]
 prefetch = []
 print-trace = [ "ark-std/print-trace" ]
-derive_serde = [ "serde/derive" ]
 reexport = []
 
 [profile.bench]
