--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ sha2 = "0.10.8"
 digest = "0.10.7"
 
 [features]
-default = ["bits"]
+default = [ "bits", "bn256-table" ]
 asm = []
 bits = ["ff/bits"]
 bn256-table = []
